files added to the repo

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,33 +1,49 @@
-version: 0.2
+#!/bin/bash
 
-phases:
-  install:
-    runtime-versions:
-      python: 3.9
-    commands:
-      - echo "Installing dependencies..."
-      - pip install pyinstaller
-  pre_build:
-    commands:
-      - echo "Retrieving DockerHub credentials from AWS Secrets Manager..."
-      - export DOCKERHUB_USERNAME=$(aws secretsmanager get-secret-value --secret-id arn:aws:secretsmanager:ap-south-1:339712721384:secret:dockerhub-G8QpL5 --query SecretString --output text | jq -r .username)
-      - export DOCKERHUB_PASSWORD=$(aws secretsmanager get-secret-value --secret-id arn:aws:secretsmanager:ap-south-1:339712721384:secret:dockerhub-G8QpL5 --query SecretString --output text | jq -r .password)
-      - echo "Logging in to DockerHub..."
-      - echo $DOCKERHUB_PASSWORD | docker login --username $DOCKERHUB_USERNAME --password-stdin
-  build:
-    commands:
-      - echo "Building the game executable..."
-      - cd game
-      - pyinstaller --onefile game.py
-      - cd ..
-      - echo "Running build and push script..."
-      - chmod +x buildandpush.sh
-      - ./buildandpush.sh
-  post_build:
-    commands:
-      - echo "Uploading game executable to S3..."
-      - aws s3 cp game/dist/game s3://builddb/game
+set -e  # Exit on any error
 
-artifacts:
-  files:
-    - game/dist/game
+# Set variables
+AWS_REGION="ap-south-1"
+ECR_REPO_GAME="builddb-game"
+ECR_REPO_WEBAPP="builddb-webapp"
+GAME_IMAGE_NAME="game-image"
+WEBAPP_IMAGE_NAME="webapp-image"
+TAG="latest"
+SECRETS_ID="arn:aws:secretsmanager:ap-south-1:339712721384:secret:dockerhub-G8QpL5"  # Correct ARN
+
+# Retrieve DockerHub credentials from AWS Secrets Manager
+echo "Retrieving DockerHub credentials from AWS Secrets Manager..."
+DOCKERHUB_CREDENTIALS=$(aws secretsmanager get-secret-value --secret-id $SECRETS_ID --query SecretString --output text)
+DOCKERHUB_USERNAME=$(echo $DOCKERHUB_CREDENTIALS | jq -r .username)
+DOCKERHUB_PASSWORD=$(echo $DOCKERHUB_CREDENTIALS | jq -r .password)
+
+# Check if credentials are retrieved successfully
+if [ -z "$DOCKERHUB_USERNAME" ] || [ -z "$DOCKERHUB_PASSWORD" ]; then
+  echo "Failed to retrieve DockerHub credentials from AWS Secrets Manager."
+  exit 1
+fi
+
+# Authenticate Docker to DockerHub
+echo "Authenticating Docker to DockerHub..."
+echo $DOCKERHUB_PASSWORD | docker login --username $DOCKERHUB_USERNAME --password-stdin
+
+# Authenticate Docker to ECR
+echo "Authenticating Docker to ECR..."
+aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $(aws sts get-caller-identity --query 'Account' --output text).dkr.ecr.$AWS_REGION.amazonaws.com
+
+# Build the Docker images
+echo "Building Docker images..."
+docker build -t $GAME_IMAGE_NAME:latest ./game
+docker build -t $WEBAPP_IMAGE_NAME:latest ./webapp
+
+# Tag the Docker images
+echo "Tagging Docker images..."
+docker tag $GAME_IMAGE_NAME:latest $(aws sts get-caller-identity --query 'Account' --output text).dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO_GAME:$TAG
+docker tag $WEBAPP_IMAGE_NAME:latest $(aws sts get-caller-identity --query 'Account' --output text).dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO_WEBAPP:$TAG
+
+# Push the Docker images to ECR
+echo "Pushing Docker images to ECR..."
+docker push $(aws sts get-caller-identity --query 'Account' --output text).dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO_GAME:$TAG
+docker push $(aws sts get-caller-identity --query 'Account' --output text).dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO_WEBAPP:$TAG
+
+echo "Docker images have been pushed to ECR successfully."
