--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -1,4 +1,6 @@
-FROM python:3.9-slim
+# Dockerfile for ARM64 architecture
+# Use the ARM64 base image for Python
+FROM python:3.9-slim-arm64
 
 WORKDIR /app
 
