--- a/game/Dockerfile
+++ b/game/Dockerfile
@@ -13,4 +13,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 
 # Command to run the application
-CMD ["python", "app.py"]
+CMD ["python", "game.py"]
